@startuml

skinparam classAttributeIconSize 0

abstract class Media{
    #titre : string
    #statut : string
    #dateCreation : dateTime
    #duréeEmprunt : int
}

class Livre{
    -isbn : string
    -auteur : string
    -nombrePages : int
}

class BluRay{
    -réalisateur : string
    -durée : string
    -annéeSortie : string
}

class Magazine{
    -numéro : string
    -datePublication : dateTime
}

class Adherent{
    -numAdherent : string
    -prenom : string
    -nom : string
    -mail : string
    -dateAdhesion : string
}

class Emprunt{
    -dateEmprunt : dateTime
    -dateRetourEstimée : dateTime
    -dateRetour : dateTime
}

Media <|-- Livre : "Hérite de"
Media <|-- BluRay : "Hérite de"
Media <|-- Magazine : "Hérite de"
Media "1..1"<-- "1..*      " Emprunt : "Appartient"
Adherent "1..1 " <-- "1..* " Emprunt : "Possède"

@enduml